# QDialogTest

./: CMakeLists.txt  MyDialog.cpp  MyDialog.h  main.cpp
